# lichess-api

./: .gitignore  Cargo.toml  README.md
.github/workflows/: test.yaml
examples/: lichess.rs  main.rs
src/: client.rs  error.rs  lib.rs
src/api/: account.rs  analysis.rs  board.rs  bot.rs  broadcasts.rs  challenges.rs  engine.rs  external_engine.rs  fide.rs  games.rs  messaging.rs  mod.rs  oauth.rs  opening.rs  openings.rs  player.rs  puzzles.rs  relations.rs  simuls.rs  studies.rs  tablebase.rs  teams.rs  tv.rs  users.rs
src/model/: arena_tournaments.rs  base_components.rs  bulk_pairings.rs  challenges.rs  external_engine.rs  mod.rs  oauth.rs  puzzles.rs  swiss_tournaments.rs  tv.rs  users.rs
src/model/account/: email.rs  kid.rs  mod.rs  preferences.rs  profile.rs
src/model/analysis/: cloud.rs
src/model/board/: abort.rs  berserk.rs  chat.rs  claim_victory.rs  draw.rs  mod.rs  move.rs  resign.rs  seek.rs  stream_events.rs  takeback.rs
src/model/bot/: abort.rs  chat.rs  draw.rs  mod.rs  move.rs  online.rs  resign.rs  stream_events.rs  stream_game.rs  upgrade.rs
src/model/bot/stream/: game.rs  (+1 more)
src/model/challenges/: accept.rs  add_time.rs  ai.rs  cancel.rs  create.rs  decline.rs  list.rs  mod.rs  open.rs  start_clocks.rs
src/model/engine/: analyse.rs  create.rs  delete.rs
src/model/external_engine/: acquire_analysis.rs  create.rs  delete.rs  id.rs  list.rs  mod.rs  update.rs
src/model/fide/: mod.rs  player.rs  search.rs
src/model/games/: import.rs  mod.rs  ongoing.rs
src/model/messaging/: inbox.rs
src/model/oauth/: mod.rs  revoke.rs  test.rs
src/model/opening/: masters.rs  mod.rs
src/model/openings/: lichess.rs  masters.rs  mod.rs  otb.rs  player.rs
src/model/player/: mod.rs
src/model/puzzles/: activity.rs  daily.rs  dashboard.rs  id.rs  mod.rs  race.rs  storm_dashboard.rs
src/model/relations/: block.rs  follow.rs  following.rs  mod.rs  unblock.rs  unfollow.rs
src/model/simuls/: current.rs  mod.rs
src/model/studies/: import_pgn_into_study.rs  mod.rs
src/model/tablebase/: antichess.rs  atomic.rs  mod.rs  standard.rs
src/model/tv/: channels.rs  games.rs  mod.rs
src/model/users/: activity.rs  autocomplete.rs  autocomplete_name.rs  by_id.rs  crosstable.rs  leaderboard.rs  live_streamers.rs  mod.rs  note.rs  performance.rs  public.rs  rating_history.rs  status.rs  top_10.rs
src/models/: account.rs  analysis.rs  bot.rs  messaging.rs  mod.rs  opening_explorer.rs  relations.rs
tests/: model.rs  models.rs  offline.rs  online.rs  response_models.rs  tests.rs
tests/data/: puzzle_dashboard.json
tests/data/response/: activities.json  challenge.json  challenge_ai.json  challenge_anonymous.json  challenge_canceled.json  challenge_declined.json  chat_line.json  chat_line_spectator.json  current_simuls.json  error.json  game_finish.json  game_full_ai.json  game_full_anonymous.json  game_full_human.json  game_full_humans.json  game_json.json  game_start.json  game_state.json  game_state_resign.json  not_found.json  notes.json  opponent_gone_false.json  opponent_gone_true.json  performance.json  players.json  public_user_data.json  puzzle.json  puzzle_race.json  puzzle_round.json  rating-history.json  storm_dashboard.json  streamers.json  tv_channels.json  tv_stream_featured.json  tv_stream_featured_untitled.json  tv_stream_fen.json
(+16 files in other folders)
