[package]
name = "lichess-api"
version = "0.4.0"
edition = "2021"
license = "Apache-2.0"
description = "A Rust client for Lichess API v2.0.0"
keywords = ["lichess", "api", "client"]
categories = ["api-bindings", "asynchronous"]
homepage = "https://github.com/ion232/lichess-api"
repository = "https://github.com/ion232/lichess-api"
readme = "README.md"

[dependencies]
reqwest = { version = "0.11.27", features = ["json", "stream"] }

# Other dependencies.
async-std = "1.12.0"
bytes = "1.6.0"
futures = "0.3.30"
futures-core = "0.3.30"
http = "0.2"
mime = "0.3.17"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
serde_with = { version = "2.3.3", features = ["chrono"] }
serde_urlencoded = "0.7.1"
thiserror = "1.0.61"
tracing = "0.1.40"
url = "2.5.1"

[dev-dependencies]
clap = { version = "4.5.7", features = ["derive"] }
color-eyre = "0.6.3"
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
rand = "0.8.5"

