[package]
name = "lichess-api"
version = "0.5.0"
edition = "2021"
license = "Apache-2.0"
description = "A Rust client for Lichess API v2.0.0"
keywords = ["lichess", "api", "client"]
categories = ["api-bindings", "asynchronous"]
homepage = "https://github.com/ion232/lichess-api"
repository = "https://github.com/ion232/lichess-api"
readme = "README.md"

[dependencies]
reqwest = { version = "0.12.7", features = ["json", "stream"] }

# Other dependencies.
async-std = "1.12.0"
bytes = "1.7.1"
futures = "0.3.30"
futures-core = "0.3.30"
http = "1.1.0"
mime = "0.3.17"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.128"
serde_with = { version = "3.9.0", features = ["chrono"] }
serde_urlencoded = "0.7.1"
thiserror = "1.0.63"
tracing = "0.1.40"
url = "2.5.2"

[dev-dependencies]
clap = { version = "4.5.17", features = ["derive"] }
color-eyre = "0.6.3"
getrandom = { version = "0.2.3", features = ["js"] }
rand = "0.8.5"
tokio = { version = "1.40.0", features = ["macros", "rt"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

