[package]
name = "lichess-api"
version = "0.6.0"
edition = "2021"
license = "Apache-2.0"
description = "A Rust client for Lichess API v2.0.0"
keywords = ["lichess", "api", "client"]
categories = ["api-bindings", "asynchronous"]
homepage = "https://github.com/ion232/lichess-api"
repository = "https://github.com/ion232/lichess-api"
readme = "README.md"

[dependencies]
reqwest = { version = "0.12.7", features = ["json", "stream"] }

# Other dependencies.
async-std = "1.13.1"
bytes = "1.10.1"
futures = "0.3.31"
futures-core = "0.3.31"
http = "1.3.1"
mime = "0.3.17"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_with = { version = "3.12.0", features = ["chrono"] }
serde_urlencoded = "0.7.1"
thiserror = "2.0.12"
tracing = "0.1.41"
url = "2.5.4"

[dev-dependencies]
clap = { version = "4.5.32", features = ["derive"] }
color-eyre = "0.6.3"
getrandom = { version = "0.3.2" }
rand = "0.9.0"
tokio = { version = "1.44.1", features = ["macros", "rt"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

